# newsfeed-mcp

./: LICENSE  README.md  pyproject.toml
newsfeed_mcp/: __init__.py  __main__.py  hackernews.py  lobsters.py  techcrunch.py
