[project]
name = "newsfeed-mcp"
version = "0.1.0"
description = "Newsfeed MCP: Current headlines and discussions from TechCrunch, Hacker News and Lobste.rs"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["newsfeed_mcp"]

